2010-03-10  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] fast/multicol/hit-test-above-or-below.html fails
        https://bugs.webkit.org/show_bug.cgi?id=35973

        The test was introduced in r55546, it has been failing since then.

        * platform/qt/Skipped: fast/multicol/hit-test-above-or-below.html skipped until fix.

2010-03-07  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        [CAIRO] DoS on iexploder test with high text stroke width.
        https://bugs.webkit.org/show_bug.cgi?id=33759

        Add a test case with the -webkit-text-stroke-width attribute
        set to a high value to illustrate the issue.

        * fast/text/text-stroke-width-cairo-dos-expected.txt: Added.
        * fast/text/text-stroke-width-cairo-dos.html: Added.

2010-03-10  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by David Levin.

        Bug 28293 -  [Chromium] event.datatransfer.getdata("text/uri-list") is treated the same as getdata("URL")
        https://bugs.webkit.org/show_bug.cgi?id=28293
        
        Change ChromiumDataObject such that it treats types "URL" and "text/uri-list"
        correctly for event.dataTransfer.getData/setData. Currently both are treated
        as synonyms, but for "URL", getData is supposed to only return the first valid URL
        contained within the data for "text/uri-list" (see HTML5 spec).
        
        Layout test checks various combinations in a drag-n-drop operation.
        Skipping on all other platforms since they don't implement this correctly, either.

        * editing/pasteboard/dataTransfer-setData-getData.html: Added.
        * editing/pasteboard/script-tests/dataTransfer-setData-getData.js: Added.
        (dragTarget):
        (moveMouseToCenterOfElement):
        (dragOntoDragTarget):
        (doDrop):
        (test):
        (runTest):
        * platform/mac/Skipped:
        * platform/gtk/Skipped:
        * platform/qt/Skipped: